--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,12 +7,13 @@ Maintainer: The package maintainer <michael.kane@yale.edu>
 Description: Captures functions, data, and documentation for BIS620 as taught in 2022.
 License: LGPL (>= 2.1)
 Encoding: UTF-8
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 Imports: 
   dplyr,
   ggplot2,
   purrr,
-  tidyr
+  tidyr，
+  ggpubr
 Roxygen: list(markdown = TRUE)
 Depends: 
   R (>= 4.2)
